# rust-todo

./: Cargo.toml  README.md  docker-compose.yml  test_crud.sh  test_traces.sh
migrations/: 001_create_todos.sql
src/: external_service.rs  main.rs  main_complex.rs  main_simple.rs  models.rs  repository.rs
